# dl-pet

./: .gitignore  config.py  data.py  download_carvana.py  download_mvtec_ad_dataset.py  model.py  model2.py  pyproject.toml  requirements.txt  test.py  train.py
anki/: dl_pet_architecture.tsv
configs/: default.yaml
dl_pet/: config.py
dl_pet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dl_pet/engine/: __init__.py  eval_loop.py  metrics.py  train_loop.py
dl_pet/models/: __init__.py  model.py
dl_pet/utils/: io.py
notes/: dl_pet_live_coding.md
scripts/: test.py  train.py  validate.py
